<resources>
    <string name="app_name">Money4Drive</string>
    <string name="txt">Lorem Ipsum has been the industry standard dummy text ever since the 1500s when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries but also the leap into electronic typesetting remaining essentially unchanged.</string>
    <string name="title_activity_select_language">Select Language</string>
    <string name="title_activity_feild_exe_login">Login</string>
    <string name="email">Email-id</string>
    <string name="pass">Password</string>
    <string name="emailhint">Enter email-id</string>
    <string name="passwordhint">Enter password</string>
    <string name="title_activity_dash_board">Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_total_projects">Total Projects</string>
    <string name="title_activity_project_details">Project Details</string>
    <string name="title_activity_select_shop">Select Shop</string>
    <string name="title_activity_shop_detail">Shop Details</string>
    <string name="title_activity_performed">Activities To Be Performed</string>
    <string name="title_activity_upload_photos">Upload Photos</string>
    <string name="title_activity_image_details">Image Details</string>
    <string name="title_activity_view_all_image">Upload Photos</string>

    <string name="welcome">WELCOME</string>
    <string name="logintxt"><![CDATA[Login below with your email & password]]></string>
    <string name="login">LOGIN</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="totalproject">12</string>
    <string name="totalprojecttxt">Total Projects</string>
    <string name="compProj">Completed Projects</string>
    <string name="newAssign">New Assigned Projects</string>
    <string name="pending">Pending Projects</string>
    <string name="recentmsg">Recent Messages</string>
    <string name="callManager">Call Manager</string>
    <string name="projTittle">Project Title -</string>
    <string name="projDesc">Project Description -</string>
    <string name="creationDate">Creation Date -</string>
    <string name="allocationDate">Allocation Date -</string>
    <string name="allocationmedia">Allocate Media -</string>
    <string name="ok">OK</string>
    <string name="State">State</string>
    <string name="City">City</string>
    <string name="Shop">Shop</string>
    <string name="confirmshop">Confirm Shop</string>
    <string name="NEXT">NEXT</string>
    <string name="shopprsonnm">Shop Contact Person Name</string>
    <string name="personNm">Shop Contact Person No.</string>
    <string name="shopid">Shop-Id</string>
    <string name="address">Address</string>
    <string name="Cancel">Cancel</string>
    <string name="Confirm">Confirm</string>
    <string name="shopnm">Shop/Company Name -</string>
    <string name="activities">Activities -</string>
    <string name="taskcomplt">TASK COMPLETED</string>
    <string name="companynm">Company Name</string>
    <string name="takepic">TAKE PICTURES</string>
    <string name="submit">SUBMIT</string>
    <string name="addmore">ADD MORE PICTURES</string>
    <string name="dimentation">Dimension (Feet)</string>
    <string name="remark">Remark</string>
    <string name="save">SAVE</string>
    <string name="thanku">thank - you</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="addressuser">Address</string>
    <string name="edit">SUBMIT</string>
    <string name="emailId">Email-Id</string>
    <string name="newMsg">New Messages</string>
    <string name="selectUser">Select User</string>
    <string name="send">SEND</string>
    <string name="title_activity_select_auto">Select Auto</string>
    <string name="autoRessno">Auto Registration No.</string>
    <string name="title_activity_auto_details">Auto Details</string>
    <string name="autodNm">Auto Driver Name</string>
    <string name="driverconNo">Driver Contact No.</string>
    <string name="autoregid">Auto Registration No.</string>
    <string name="driveraddress">Driver Address</string>
    <string name="driverCity">Driver City</string>
    <string name="title_activity_performed_auto">Activities to be Performed</string>
    <string name="autoRegNo">Auto Registration No.</string>
    <string name="autoDrivernm">Auto Driver Name</string>
    <string name="title_activity_select_bus">Select Bus</string>
    <string name="busRessno">Bus Registration No.</string>
    <string name="title_activity_bus_details">Bus Details</string>
    <string name="busDriverdNm">Bus Driver Name</string>
    <string name="busregid">Bus Registration No.</string>
    <string name="title_activity_performed_bus">Activities to be Performed</string>
    <string name="title_activity_fleet_details">Fleet Details</string>
    <string name="FleetdNm">Fleet Driver Name</string>
    <string name="fleetregid">Fleet Reg. No.</string>
    <string name="title_activity_performed_fleet">Activities to be Performed</string>
    <string name="fleetRegNo">Fleet Reg. No.</string>
    <string name="fleetDrivernm">Fleet Driver Name</string>
    <string name="title_activity_select_cab">Select Cab</string>
    <string name="cabDriverdNm">Cab Driver Name</string>
    <string name="cabregid">Cab Reg. No.</string>
    <string name="cabconNo">Cab Contact No.</string>
    <string name="cabTyp">Cab Type</string>
    <string name="cabRessno">Cab Registration No.</string>
    <string name="title_activity_performed_cab">Activities to be Performed</string>
    <string name="title_activity_survey_exc_login">Survey Executive Login</string>
    <string name="title_activity_select_fleet">Select Fleet</string>
    <string name="fleetTyp">Fleet Type</string>
    <string name="fleetRessno">Fleet Reg. No.</string>
    <string name="title_activity_dash_board_survey">DashBoard</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="forgetPassword">Forgot your password? Dont worry we we\'ll be there for you. Enter your email-id below then we will email you a password reset link :- </string>
    <string name="enterEmail">Enter email-id here</string>
    <string name="emailCapital">EMAIL-ID</string>
    <string name="selectRole">Select Role :</string>
    <string name="mediatyp">Media Type</string>
    <string name="some_error">Something went wrong, please try again</string>
    <string name="lato_regular">Lato-Regular.ttf</string>
    <string name="title_activity_single_detail">Activity Detail</string>
    <string name="title_activity_select_transit_media">Select Media Type</string>
    <string name="title_activity_transit_media_detail">Vehicle Details</string>
    <string name="title_activity_single_photo_upload">SinglePhotoUploadActivity</string>
    <string name="title_activity_print_media_detail">Print Media Details</string>
    <string name="title_activity_add_shop">Add Shop </string>
    <string name="shop_name">Shop Name</string>
    <string name="contact_name">Contact Person Name</string>
    <string name="contact_no">Contact Person No.</string>
    <string name="button_save">Save</string>
    <string name="title_activity_add_transit">Add Transit</string>
    <string name="title_activity_select_shop_media_type">Select Media Type</string>
    <string name="title_activity_select_shop_media_option">Select Media Option</string>
    <string name="title_activity_temp">temp</string>
    <string name="title_activity_select_transit_media_option">Select Media Option</string>
    <string name="title_activity_media_detail">Media Details</string>
    <string name="title_activity_add_media">Add Media</string>
    <string name="api_error_msg">Server not responding</string>
    <string name="select_type">Select Media Type</string>
    <string name="select_option">Select Media Option</string>
    <string name="select_hoarding">Select Hoarding</string>
    <string name="title_activity_emedia_detail">E-Media Details</string>
    <string name="title_confirm_details">Transit Details</string>
    <string name="title_activity_perform_pmedia">PerformPMediaActivity</string>
    <string name="title_activity_perform_emedia">PerformEMediaActivity</string>
    <string name="title_activity_add_hoarding">Add Hoarding</string>
    <string name="title_activity_add_wall">Add Wall</string>
    <string name="title_activity_hoarding_detail">Hoarding Details</string>
    <string name="title_activity_wall_detail">Wall Details</string>
    <string name="dummy_msg">To sure calm much most long me mean. Able rent long in do we. Uncommonly no it announcing melancholy an in. Mirth learn it he given. Secure shy favour length all twenty denote. He felicity no an at packages answered opinions juvenile.</string>
    <string name="title_activity_chat">Project Chat </string>
    <string name="title_activity_select_project_for_chat">Select Project</string>
    <string name="title_activity_select_user_for_chat">Select User</string>
    <string name="app_version">App version 1.0 (06/12/2018)</string>
    <string name="title_activity_transit_detail">Details</string>
</resources>
