<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:id="@+id/container">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp">


        <TextView
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            style="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/hintcolor"
            android:lineSpacingExtra="@dimen/_5sdp"
            android:text="@string/forgetPassword"

            android:fontFamily="@font/oxygen"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:text="@string/emailCapital"
            android:textAllCaps="true"
            android:textColor="@color/white"

            android:fontFamily="@font/oxygen"
            />


        <EditText
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:id="@+id/email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColorHint="@color/hintcolor"
            android:textColor="@color/hintcolor"
            android:background="@null"
            android:hint="@string/enterEmail"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:fontFamily="@font/oxygen"
              />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividerColor">
        </View>


    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/green_border_rounded"
        android:gravity="center"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/oxygen"
         />


</LinearLayout>










