<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@drawable/footerimg"
        android:layout_height="wrap_content"></LinearLayout>
    <ScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:focusable="true"
        android:focusableInTouchMode="true">
            <LinearLayout
                android:id="@+id/linearmain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="@dimen/_8sdp"
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/shopprsonnm"
                    android:textColor="@color/white" />
                <EditText
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:padding="@dimen/_5sdp"
                    android:id="@+id/etname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="NA"
                    android:background="@null"
                    android:inputType="textCapSentences|textAutoCorrect|textPersonName"
                    android:singleLine="true"
                    android:textColor="@color/hintcolor"
                    android:textColorHint="@color/hintcolor"
                    app:edittextfont="Lato-Light.ttf"
                    app:edittextfontHint="Lato-Light.ttf" />

                <View
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dividerColor">

                </View>

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_marginTop="@dimen/_8sdp"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/personNm"
                    android:textColor="@color/white" />
                <EditText
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:padding="@dimen/_5sdp"
                    android:id="@+id/etMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    
                    android:background="@null"
                    android:hint="NA"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="@color/hintcolor"
                    android:textColorHint="@color/hintcolor"
                    app:edittextfont="Lato-Light.ttf"
                    app:edittextfontHint="Lato-Light.ttf" />

                <View
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dividerColor">

                </View>

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/shopid"
                    android:textColor="@color/white" />
                <EditText
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:padding="@dimen/_5sdp"
                    android:id="@+id/etShopID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    
                    android:hint="NA"
                    android:enabled="false"
                    android:background="@null"
                    android:inputType="textCapSentences"

                    android:singleLine="true"
                    android:textColor="@color/hintcolor"
                    android:textColorHint="@color/hintcolor"
                    app:edittextfont="Lato-Light.ttf"
                    app:edittextfontHint="Lato-Light.ttf" />

                <View
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dividerColor">

                </View>

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/address"
                    android:textColor="@color/white" />
                <EditText
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:padding="@dimen/_5sdp"
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    
                    android:hint="NA"
                    android:inputType="textCapSentences"
                    android:background="@null"
                    
                    android:singleLine="true"
                    android:textColor="@color/hintcolor"
                    android:textColorHint="@color/hintcolor"
                    app:edittextfont="Lato-Light.ttf"
                    app:edittextfontHint="Lato-Light.ttf" />

                <View
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dividerColor">

                </View>

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/City"
                    android:textColor="@color/white" />
                <EditText
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:padding="@dimen/_5sdp"
                    android:id="@+id/etCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    
                    android:hint="NA"
                    android:background="@null"
                    android:inputType="textCapSentences"
                    
                    android:singleLine="true"
                    android:textColor="@color/hintcolor"
                    android:textColorHint="@color/hintcolor"
                    app:edittextfont="Lato-Light.ttf"
                    app:edittextfontHint="Lato-Light.ttf" />

                <View
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dividerColor">

                </View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@+id/linearmain"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <Button
                        android:id="@+id/btnCancel"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_weight="0.5"
                        android:background="@drawable/green_plan_border"
                        android:gravity="center"
                        android:padding="@dimen/_1sdp"
                        android:text="@string/Cancel"
                        android:textColor="@color/green"
                        />

                    <Button
                        android:id="@+id/btnConfirm"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_weight="0.5"
                        android:background="@drawable/green_border_rounded"
                        android:gravity="center"
                        android:padding="@dimen/_1sdp"
                        android:text="@string/Confirm"
                        android:textColor="@color/white"
                         />

                </LinearLayout>

            </LinearLayout>
    </ScrollView>
</RelativeLayout>